--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Scarica il mio libro!</h1>
-    <img src="Copertina PBEM.jpg" alt="Copertina del libro">
+    <img src="https://github.com/fatoadg/PBEM/blob/main/Copertina%20PBEM.jpg" alt="Copertina del libro">
     <p><a href="PDF/mio-libro.pdf" download>📕 Scarica in PDF</a></p>
     <p><a href="EPUB/mio-libro.epub" download>📘 Scarica in ePub</a></p>
 </body>
