--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Scarica il mio libro!</h1>
     <img src="https://github.com/fatoadg/PBEM/blob/main/Copertina%20PBEM.jpg" alt="Copertina del libro">
-    <p><a href="PDF/mio-libro.pdf" download>📕 Scarica in PDF</a></p>
-    <p><a href="EPUB/mio-libro.epub" download>📘 Scarica in ePub</a></p>
+    <p><a href="https://github.com/fatoadg/PBEM/blob/main/Pbem%205%20x%208%2012%2C7%20x%2020%2C32%20cm%20-%20Unknown.pdf" download>📕 Scarica in PDF</a></p>
+    <p><a href="https://github.com/fatoadg/PBEM/blob/main/Pbem%205%20x%208%2012%2C7%20x%2020%2C32%20cm%20-%20Falvella%20Antonio.epub" download>📘 Scarica in ePub</a></p>
 </body>
 </html>
